# mpool

./: .gitignore  CMakeLists.macros  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Readme.md
include/: CMakeLists.txt
include/mpool/: mpool.h  mpool_devrpt.h  mpool_ioctl.h
samples/: CMakeLists.txt  common.h  mblock_sample.c  mcache_sample.c  mdc_sample.c  mlog_sample.c  mpool_sample.c
scripts/cmake/: CTestCustom.cmake.in  debug.cmake  defaults.cmake  optdebug.cmake  relassert.cmake  release.cmake  relwithdebug.cmake
scripts/deb/: CMakeLists.txt  postinst  postrm  preinst  prerm
scripts/dev/: get_distro.sh  mpool-chkconfig  mpool-chkconfig-fix.sh
scripts/modules-load.d/: CMakeLists.txt  mpool.conf
scripts/package/: CMakeLists.txt  mpool-devel.spec.in  mpool-test.spec.in  rpm-devel-post-install.sh  rpm-post-install.sh  rpm-post-uninstall.sh  rpm-pre-uninstall.sh
scripts/rpm/: CMakeLists.txt  mpool.spec.in  rpm-post-install.sh  rpm-pre-install.sh
scripts/sysctl.d/: 90-mpool.conf  CMakeLists.txt
scripts/systemd/: CMakeLists.txt  mpool.service
scripts/tmpfiles.d/: CMakeLists.txt  mpool.conf
scripts/udev/rules.d/: 90-mpool.rules  CMakeLists.txt
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  common.c  common.h  ls.c  ls.h  mpool.c  mpool.h  mpool_ui.c  mpool_ui.h  ui_common.c  ui_common.h  yaml.c  yaml.h
src/mpool/: CMakeLists.txt  dev_cntlr.c  dev_cntlr.h  device_table.c  device_table.h  discover.c  discover.h  logging.c  logging.h  mdc.c  mlog.c  mlog.h  mp.c  mp.h  mpcore_defs.h  mpctl.c  mpctl.h  mpctl_params.c  mpctl_params.h  mpool_err.c  mpool_err.h  mpool_params.c  omf.c  omf.h  omf_if.h  pd.c  pd.h  sb.c  sb.h  uhandles-and-refs.txt
src/mpool/include/mpcore/: mlog.h  mpcore.h  mpcore_defs.h
src/mpool/include/mpctl/: ids.h  imblock.h  imdc.h  imlog.h  imp.h  impool.h  pd_props.h
src/mptest/: CMakeLists.txt  mptest.c
src/util/include/util/: alloc.h  atomic.h  base.h  byteorder.h  compiler.h  inttypes.h  list.h  log2.h  minmax.h  mutex.h  omf.h  page.h  param.h  parse_num.h  parser.h  platform.h  printbuf.h  rwsem.h  string.h  uuid.h  valgrind.h
src/util/source/: alloc.c  param.c  parse_num.c  parser.c  printbuf.c  string.c
sub/: .gitignore  CMakeLists.txt  LICENSES.md
test/: CMakeLists.txt
test/smoke/: CMakeLists.txt  Readme.md  smoke  smoke-from-ctest  smoke-resetenv  smoke-setenv  smoke-showenv
test/smoke/tests/: aloha  group.mp  group.smoke  mpft-correctness  mpiotest  mpool  mptest  version  xoption
test/test_apps/: CMakeLists.txt
test/test_apps/mcache_api/: CMakeLists.txt  mcache_api.c
test/test_apps/mpft/: CMakeLists.txt  mpft.c  mpft.h  mpft_ds.c  mpft_ds.h  mpft_mblock.c  mpft_mblock.h  mpft_mdc.c  mpft_mdc.h  mpft_mlog.c  mpft_mlog.h  mpft_mp.c  mpft_mp.h  mpft_thread.c  mpft_thread.h
test/test_apps/mpiotest/: CMakeLists.txt  mpiotest.c
